--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
         <div class="row">
 
-          <div class="col-lg-4 col-md-6 col-6">
+          <div class="col-lg-4 col-md-6">
             <div class="box" data-aos="fade-up" data-aos-delay="100">
               <h3><i class="bi bi-heart-fill text-danger" style="font-size: 48px;"></i></h3>
               <h4><span>SUPPORT</span></h4>
@@ -458,7 +458,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-6 mt-4 mt-md-0">
+          <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
             <div class="box featured" data-aos="fade-up" data-aos-delay="200">
               <h3><i class="bi bi-person-fill" style="font-size: 48px;"></i></h3>
               <h4><span>VOLUNTEER</span></h4>
@@ -470,7 +470,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-6 mt-4 mt-lg-0">
+          <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
             <div class="box" data-aos="fade-up" data-aos-delay="300">
               <h3><i class="bi bi-currency-dollar text-danger" style="font-size: 48px;"></i></h3>
               <h4><span>FUNDRAISING</span></h4>
