--- a/index.html
+++ b/index.html
@@ -400,14 +400,15 @@
             <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
               <i class="bi bi-card-checklist"></i>
               <h4><a href="#">Project 9</a></h4>
-              <p>A visit to Ibara correctional Home with gifts if Quran, Islamic Rosary, Praying mat, plastic kettles, and food items</p>
+              <p>A visit to Ibara correctional Home with gifts of Quran, Islamic Rosary, Praying mat, plastic kettles. we 
+                gave Bibles to the Christian among them and food items</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
               <i class="bi bi-card-checklist"></i>
               <h4><a href="#">Project 10</a></h4>
-              <p>Raising of funds for  a member with  cancer and burial his burial when he didn't survive after</p>
+              <p>We raised substantial funds for a cancer patient member, also made adequate burial arrangement when he eventually passed on</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
@@ -417,12 +418,21 @@
               <p>Empowerment training to members and non members.</p>
             </div>
           </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
+              <i class="bi bi-card-checklist"></i>
+              <h4><a href="#">Project 12</a></h4>
+              <p>Free medical check ups and distribution of drugs and eye Glasses to NUT Mushin chapter.
+                Phase 1 and phase 2 and getting ready for phase 3</p>
+            </div>
+          </div>
         </div>
 
       </div>
-      
+      <center>
+      <a href="program.html" class="about-btn1 icon-box1 mt-5"><span>See More Projects</span> <i class="bi bi-chevron-right"></i></a>
+    </center>
     </section>
-
     <section class="container-fluid background" >
           <div class="card card-join border-0 rounded-0 ">
             <div class="card-body card-join-body ">
@@ -661,6 +671,18 @@
                 <h4>Miss Amaka Lin</h4>
                 <span>Board of Trustee</span>
                 <span>Abuja</span>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+            <div class="member" data-aos="fade-up" data-aos-delay="400">
+              <div class="member-img">
+                <img src="assets/img/team/board5.jpeg" class="img-fluid" alt="">
+              </div>
+              <div class="member-info">
+                <h4>Mr. Bola Emmanuel Olowo</h4>
+                <span>Board of Trustee</span>
+                <span>Ilorin</span>
               </div>
             </div>
           </div>
