--- a/index.html
+++ b/index.html
@@ -630,7 +630,7 @@
                 <img src="assets/img/team/board1.jpeg" class="img-fluid" alt="">
               </div>
               <div class="member-info">
-                <h4> Otunba Olatunde Steven D.</h4>
+                <h4> Otunba Olatunde S Damolekun.</h4>
                 <span>Founder</span>
                 <span>Houston Texax.</span>
               </div>
