--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
       <div class="row">
         <div class="col-xl-6">
           <h1>Empowering Communities,</h1>
-          <h2>Transforming Lives.</h2>
-          <h2> Empowering Change, One Life at a Time</h2>
+          <strong><h2>Transforming Lives.</h2>
+          <h2> Empowering Change, One Life at a Time</h2></strong>
           <a href="financial-info.html" class="btn-get-started scrollto">Donate Now</a>
         </div>
       </div>
