--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="row">
         <div class="col-xl-6">
           <h1>Empowering Communities,</h1>
-          <strong><h2>Transforming Lives.</h2>
+          <h2>Transforming Lives.</h2>
           <h2> Empowering Change, One Life at a Time</h2></strong>
           <a href="financial-info.html" class="btn-get-started scrollto">Donate Now</a>
         </div>
@@ -133,7 +133,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="2320" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="2920" data-purecounter-duration="1" class="purecounter"></span>
               <p>Transforming Lives</p>
             </div>
           </div>
@@ -141,7 +141,7 @@
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="11" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="1" class="purecounter"></span>
               <p>Projects</p>
             </div>
           </div>
