--- a/program.html
+++ b/program.html
@@ -213,7 +213,7 @@
           <div class="icon-box" data-aos="fade-up" data-aos-delay="500">
             <i class="bi bi-card-checklist"></i>
             <h4><a href="#">Project 10</a></h4>
-            <p>Raising of funds for  a member with  cancer and burial his burial when he didn't survive after</p>
+            <p>We raised substantial funds for a cancer patient member, also made adequate burial arrangement when he eventually passed on</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
@@ -221,6 +221,14 @@
             <i class="bi bi-card-checklist"></i>
             <h4><a href="#">Project 11</a></h4>
             <p>Empowerment training to members and non members.</p>
+          </div>
+        </div>
+        <div class="col-md-6 mt-4 mt-md-0">
+          <div class="icon-box" data-aos="fade-up" data-aos-delay="600">
+            <i class="bi bi-card-checklist"></i>
+            <h4><a href="#">Project 12</a></h4>
+            <p>Free medical check ups and distribution of drugs and eye Glasses to NUT Mushin chapter.
+              Phase 1 and phase 2 and getting ready for phase 3</p>
           </div>
         </div>
       </div>
